fix: migration alignment, title in modal, remove modal hover effects

--- a/assets/scss/components/import-modal.scss
+++ b/assets/scss/components/import-modal.scss
@@ -148,9 +148,6 @@
     .option-toggle-label.inactive > .dashicons {
       opacity: .35;
     }
-    &:hover {
-      background-color: #eee;
-    }
     &:not(:last-of-type) {
       border-bottom: 1px solid #eeeeee;
     }
