--- a/assets/scss/components/migration.scss
+++ b/assets/scss/components/migration.scss
@@ -24,8 +24,8 @@
   }
 }
 
-.is__onboarding .site-box.migrate-screenshot {
-  margin: 0;
+.site-box.migrate-screenshot {
+  margin: 0 auto 25px;
 }
 
 .migrate-text {
